--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   jiffy: ^6.3.1
   flutter_screenutil: ^5.9.3
   google_fonts: ^6.2.1
+  collection:
 
 dev_dependencies:
   flutter_test:
