--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: siento_find_provider
+name: siento_find_therapist
 description: "A new Flutter package project."
 version: 0.0.1
 publish_to: none
